Forwards teaching team

--- a/content/01-package-foundations/index.qmd
+++ b/content/01-package-foundations/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Package foundations
 description: Session 1
-author: R Forwards teaching team
+author: Forwards teaching team
 draft: false
 ---
 
