--- a/content/02-documentation/index.qmd
+++ b/content/02-documentation/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Function documentation and dependencies
 description: Session 2
-author: R Forwards teaching team
+author: Forwards teaching team
 draft: false
 ---
 
