--- a/content/04-check-package-documentation/index.qmd
+++ b/content/04-check-package-documentation/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Package check and documentation
 description: Session 4
-author: R Forwards teaching team
+author: Forwards teaching team
 draft: false
 ---
 
