--- a/slides/01-package-foundations/index.qmd
+++ b/slides/01-package-foundations/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Package foundations
 subtitle: R package development workshop<br>Session 1
-author: R Forwards teaching team
+author: Forwards teaching team
 format: forwardspres-revealjs
 ---
 
