--- a/slides/02-documentation/index.qmd
+++ b/slides/02-documentation/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Function documentation and dependencies
 subtitle: R package development workshop<br>Session 2
-author: R Forwards teaching team
+author: Forwards teaching team
 format: forwardspres-revealjs
 ---
 
