--- a/slides/03-testing/index.qmd
+++ b/slides/03-testing/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Testing
 subtitle: R package development workshop<br>Session 3
-author: R Forwards teaching team
+author: Forwards teaching team
 format: forwardspres-revealjs
 ---
 
