--- a/slides/04-check-package-documentation/index.qmd
+++ b/slides/04-check-package-documentation/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Package check and documentation
 subtitle: R package development workshop<br>Session 4
-author: R Forwards teaching team
+author: Forwards teaching team
 format: forwardspres-revealjs
 ---
 
