--- a/slides/05-data-publication-maintenance/index.qmd
+++ b/slides/05-data-publication-maintenance/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: Packaging data</br>Publication and maintenance
-subtitle: R package development workshop<br>Session 5
+subtitle: R package development workshop<br>Module 5
 author: Forwards teaching team
 format: forwardspres-revealjs
 ---
