--- a/workshops/summer-2025-cohort-2.qmd
+++ b/workshops/summer-2025-cohort-2.qmd
@@ -18,7 +18,7 @@ title: Summer 2025, cohort 2
 
 {{< fa clock >}} &nbsp; 14:30--16:00 UTC. [See in your time zone](https://dateful.com/convert/utc?t=1430).
 
-| Session | Date | Lead | Facilitator(s) |
+| Module | Date | Lead | Facilitator(s) |
 |----|----|----|----|
 | [Package foundations](../content/01-package-foundations/index.qmd) | June 3rd | Emma | Joyce and Heather |
 | [Function documentation and dependencies](../content/02-documentation/index.qmd) | June 17th | Joyce | Emma and Heather |
