--- a/slides/03-testing/index.qmd
+++ b/slides/03-testing/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: Testing
-subtitle: R package development workshop<br>Session 3
+subtitle: R package development workshop<br>Module 3
 author: Forwards teaching team
 format: forwardspres-revealjs
 ---
