--- a/prerequisites.qmd
+++ b/prerequisites.qmd
@@ -2,22 +2,18 @@
 title: Prerequisites
 ---
 
+*last updated: May 16th, 2025**
+
 ## Prior knowledge
 
-This is an intermediate/advanced R course, so basic knowledge of R is expected. 
+We do not assume any prior knowledge of R pacakge development, but basic knowledge of R is expected. 
 In particular, participants should be confident writing functions. 
-The final session of the workshop is on incorporating Rcpp functions in an R package, so some knowledge of C++/Rcpp is beneficial.
+Some experience with RStudio is beneficial.
 
-The first three modules of Warwick-Stats-Resources R Foundations course covers the required material basic material:
+Two of the modules from the Warwick-Stats-Resources R Foundations course covers the required material:
 
 - [Introduction to R and RStudio](https://warwick-stats-resources.github.io/r-foundations/content/01-intro/)
-- [Data Wrangling](https://warwick-stats-resources.github.io/r-foundations/content/02-data-wrangling/)
 - [Programming in R](https://warwick-stats-resources.github.io/r-foundations/content/03-programming/)
-
-The Rcpp session of the Warwick-Stats-Resources R Programming course covers C++/Rcpp:
-
-- [C++ and Rcpp](https://warwick-stats-resources.github.io/r-programming-2024/content/07-r-with-cpp/index.html)
-
 
 ## git and GitHub
 
@@ -29,7 +25,7 @@ Although there will be some time dedicated to this in the workshop, it would be 
 
 ## R and RStudio
 
-Please ensure that you have the latest versions of R and RStudio installed prior to the first session. Currently, that's R-4.4.0 and RStudio-2024.04.1. 
+Please ensure that you have the latest versions of R and RStudio installed prior to the first session. Currently, that's R-4.5.0 and RStudio-2025.05.0. 
 
 We also **strongly** recommend all participants to install the development tools to avoid potential issues installing packages.
 
@@ -39,11 +35,11 @@ Download the pre-compiled binary for your OS from https://cloud.r-project.org/ a
 
 **For Windows**
 
-Click "Download R for Windows", then "base", then "Download R-4.4.0 for Windows". This will download an `.exe` file; once downloaded, open to start the installation. 
+Click "Download R for Windows", then "base", then "Download R-4.5.0 for Windows". This will download an `.exe` file; once downloaded, open to start the installation. 
 
 **For Mac**
 
-Click "Download R for macOS", then "R-4.4.0-arm64.pkg" (the first option) to download the installer for Macs with **Apple Silicon** chips or "R-4.4.0-x86_64.pkg" (the second option) to download the installer for Macs with **Intel** chips. Run the installer to complete installation.
+Click "Download R for macOS", then "R-4.5.0-arm64.pkg" (the first option) to download the installer for Macs with **Apple Silicon** chips or "R-4.5.0-x86_64.pkg" (the second option) to download the installer for Macs with **Intel** chips. Run the installer to complete installation.
 
 **For Linux**
 
@@ -62,7 +58,7 @@ Download the `.zip` source archive under "Zip/Tarballs". Extract the files to a 
 **For all other operating systems**
 
 Download the relevant installer for your OS listed under "Installers for Supported Platforms". Run the installer to complete installation.
- 
+
 ### Development Tools
 
 Some additional tools may be required to compile R packages from source.
@@ -90,7 +86,7 @@ Tools
 
 Or for a smaller download size:
 
-1. Register as an Apple Developer (free) here: <https://developer.apple.com/programs/register/>
+1. Register as an Apple Developer (free) here: <https://developer.apple.com/programs/enroll/>
 2. Download the Command Line Tools for XCode appropriate for the version of 
 OS X you are running from here: <https://developer.apple.com/downloads/>
 
