--- a/modules.qmd
+++ b/modules.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Content"
+title: "Modules"
 listing:
-  contents: content
+  contents: modules
   sort: "description"
   type: table
   categories: false
