--- a/workshops/summer-2025-cohort-2-intro.qmd
+++ b/workshops/summer-2025-cohort-2-intro.qmd
@@ -29,7 +29,7 @@ University of York
 ![](../images/instructors/joycerobbins.jpg){width=60%}
 
 :::{.smaller80}
-Lecturer in Statistics
+Senior Lecturer in Statistics
 
 Columbia University
 :::
