--- a/workshops/summer-2025-cohort-1-intro.qmd
+++ b/workshops/summer-2025-cohort-1-intro.qmd
@@ -1,7 +1,7 @@
 ---
 title: Welcome and introduction
 subtitle: R package development workshop
-author: Ella Kaye and Pao Corrales
+author: Ella Kaye, Pao Corrales, Elio Campitelli
 format: forwardspres-revealjs
 ---
 
@@ -11,36 +11,45 @@ format: forwardspres-revealjs
 
 :::: {.columns}
 
-::: {.column width="50%"}
-### Ella Kaye
+::: {.column width="33%"}
+### [Ella Kaye](https://ellakaye.co.uk)
 
-![](../images/instructors/ellakaye.jpeg){width=50%}
+![](../images/instructors/ellakaye.jpeg){width=60%}
 
 :::{.smaller80}
 Research Software Engineer 
 
 University of Warwick
-
-<https://ellakaye.co.uk>
 :::
 :::
 
-::: {.column width="50%"}
-### Pao Corrales
+::: {.column width="33%"}
+### [Pao Corrales](https://paocorrales.github.io/)
 
-![](../images/instructors/paocorrales.png){width=50%}
+![](../images/instructors/paocorrales.png){width=60%}
 
 :::{.smaller80}
 Research Software Engineer
 
 21st Century Weather Centre
+:::
+:::
 
-<https://paocorrales.github.io/>
+::: {.column width="33%"}
+### [Elio Campitelli](https://eliocamp.github.io)
+
+![](../images/instructors/eliocampitelli.jpg){width=60%}
+
+:::{.smaller80}
+Atmospheric Scientist
+
+Monash University
 :::
 
 :::
 
 ::::
+
 
 
 ## Course material
@@ -65,9 +74,9 @@ Mondays, 09:00-10:30 UTC
 |----|----|----|----|
 | [Package foundations](../modules/01-package-foundations/index.qmd) | June 2nd | Pao | Ella |
 | [Function documentation and dependencies](../modules/02-documentation/index.qmd) | June 16th | Ella | Pao |
-| [Testing](../modules/03-testing/index.qmd) | June 30th | Pao | Ella |
+| [Testing](../modules/03-testing/index.qmd) | June 30th | Pao | Elio |
 | [Package check and documentation](../modules/04-check-package-documentation/index.qmd) | July 14th | Ella | Pao |
-| [Packaging data; Publication and maintenance](../modules/05-data-publication-maintenance/index.qmd) | July 28th | Pao | Ella |
+| [Packaging data; Publication and maintenance](../modules/05-data-publication-maintenance/index.qmd) | July 28th | Pao | Elio |
 
 ## Pieces of a puzzle
 
