--- a/workshops/summer-2025-cohort-1.qmd
+++ b/workshops/summer-2025-cohort-1.qmd
@@ -8,7 +8,7 @@ title: Summer 2025, cohort 1
 
 ## Instructors
 
-{{< fa user >}}   [Ella Kaye](https://ellakaye.co.uk) and [Pao Corrales](https://paocorrales.github.io/)
+{{< fa user >}}   [Ella Kaye](https://ellakaye.co.uk), [Pao Corrales](https://paocorrales.github.io/), and [Elio Campitelli](https://eliocamp.github.io).
 
 {{< fa envelope >}}   [ella.m.kaye\@warwick.ac.uk](mailto:ella.m.kaye@warwick.ac.uk)
 
@@ -22,9 +22,9 @@ title: Summer 2025, cohort 1
 |----|----|----|----|
 | [Package foundations](../modules/01-package-foundations/index.qmd) | June 2nd | Pao | Ella |
 | [Function documentation and dependencies](../modules/02-documentation/index.qmd) | June 16th | Ella | Pao |
-| [Testing](../modules/03-testing/index.qmd) | June 30th | Pao | Ella |
+| [Testing](../modules/03-testing/index.qmd) | June 30th | Pao | Elio |
 | [Package check and documentation](../modules/04-check-package-documentation/index.qmd) | July 14th | Ella | Pao |
-| [Packaging data; Publication and maintenance](../modules/05-data-publication-maintenance/index.qmd) | July 28th | Pao | Ella |
+| [Packaging data; Publication and maintenance](../modules/05-data-publication-maintenance/index.qmd) | July 28th | Pao | Elio |
 
 ## Welcome and introduction
 
