--- a/slides/01-package-foundations/index.qmd
+++ b/slides/01-package-foundations/index.qmd
@@ -638,6 +638,16 @@ of “goes”.
 4. Add `animal_sounds.R` so that it is tracked by git. Make a commit with the message `Add animal_sounds()`.
 5. Push all your commits from this session.
 
+## Installing the package
+
+`devtools::load_all()` roughly simulates what happens when a package is installed and loaded with `library()`.
+
+To actually install the package:
+
+- locally: `devtools::install()`
+
+- from GitHub: `remotes::install_github("USERNAME/REPO")` or `pak::pak("USERNAME/REPO")`
+
 # End matter {.inverse}
 
 ## References
